@@ -23,6 +23,42 @@ from Products.feedfeeder.extendeddatetime import extendedDateTime
 RE_FILENAME = re.compile('filename *= *(.*)')
 logger = logging.getLogger("feedfeeder")
 
+import formatter
+import htmllib
+from StringIO import StringIO
+
+# Unifiable list taken from http://www.aaronsw.com/2002/html2text.py
+unifiable = {
+    'rsquo': "'", 'lsquo': "'", 'rdquo': '"', 'ldquo': '"', 'nbsp': ' ',
+    'rarr': '->', 'larr': '<-', 'middot': '*', 'copy': '(C)',
+    'mdash': '--', 'ndash': '-', 'oelig': 'oe', 'aelig': 'ae',
+    'agrave': 'a', 'aacute': 'a', 'acirc': 'a', 'atilde': 'a', 'auml': 'a',
+    'aring': 'a',
+    'egrave': 'e', 'eacute': 'e', 'ecirc': 'e', 'euml': 'e',
+    'igrave': 'i', 'iacute': 'i', 'icirc': 'i', 'iuml': 'i',
+    'ograve': 'o', 'oacute': 'o', 'ocirc': 'o', 'otilde': 'o', 'ouml': 'o',
+    'ugrave': 'u', 'uacute': 'u', 'ucirc': 'u', 'uuml': 'u',
+    }
+
+
+class SimpleHTMLParser(htmllib.HTMLParser):
+
+    def handle_entityref(self, name):
+        logger.warn("Parsing entity %r", name)
+        value = unifiable.get(name)
+        self.formatter.add_literal_data(value)
+        logger.warn("Parsed as value %r", value)
+
+
+def convert_summary(input):
+    out = StringIO()
+    writer = formatter.DumbWriter(out)
+    parser = SimpleHTMLParser(formatter.AbstractFormatter(writer))
+    parser.feed(input)
+    value = out.getvalue()
+    out.close()
+    return value
+
 
 class FeedConsumer:
     """
@@ -119,9 +155,15 @@ class FeedConsumer:
                                 published, getattr(entry, 'title', ''))
                     continue
                 obj.setEffectiveDate(published)
+
+            summary = getattr(entry, 'summary', '')
+            logger.debug("1 summary: %r" % summary)
+            summary = convert_summary(summary)
+            logger.debug("2 summary: %r" % summary)
+
             obj.update(id=id,
                        title=getattr(entry, 'title', ''),
-                       description=getattr(entry, 'summary', ''),
+                       description=summary,
                        feedItemAuthor=getattr(entry, 'author', ''),
                        feedItemUpdated=updated,
                        link=link,
